<resources>
    <string name="app_name">RoomDataBaseNoBel</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="add">Add</string>
    <string name="_1">1</string>
    <string name="name">Name</string>
    <string name="_25">25</string>
    <string name="update_user">update user</string>
</resources>